# oh-my-markitdown

./: .docker-compose.yml.swp  .env.example  .gitignore  AUTO_CONVERT.md  CHANGELOG.md  CLI_USAGE.md  CONFIG_GUIDE.md  Dockerfile  Dockerfile.cuda  Dockerfile.rocm  LICENSE  Makefile  README.md  README_ZH_TW.md  cli.py  docker-compose.yml  markitdown  pyproject.toml
.firecrawl/: compatibility-memory.json  distil-models.json  distil-whisper-search.json  faster-whisper-batch.json  faster-whisper-docs.json
api/: __init__.py  audio_extractor.py  auto_convert.py  chunking.py  concurrency.py  config.py  constants.py  device_detector.py  device_utils.py  ip_whitelist.py  main.py  main_concurrency.py  middleware.py  ocr_client.py  readability_client.py  response.py  subtitles.py  system.py  transcription_service.py  transcription_strategy.py  whisper_transcribe.py  youtube_client.py  youtube_grabber.py
api/backends/: __init__.py  _nemo_loader.py  faster_whisper_backend.py  nemotron_backend.py  protocol.py  whisper_cpp_backend.py
docs/: ADVANCED_CONFIG.md  API_REFERENCE.md  CODE_EXAMPLES.md  GPU_DEPLOYMENT.md  SYSTEM_MANAGEMENT.md  TROUBLESHOOTING.md
docs/plans/: 2026-03-16-requirements-specification.md  2026-03-16-system-management-api.md  2026-03-17-remove-queue-design.md  2026-03-17-remove-queue-requirements.md  2026-03-17-remove-queue-tasks.md  2026-03-17-youtube-speedup-design.md  2026-03-17-youtube-speedup-requirements.md  2026-03-17-youtube-speedup-tasks.md  2026-03-19-sdk-library-migration-design.md  2026-03-19-sdk-library-migration-requirements.md  2026-03-19-sdk-library-migration-tasks.md  2026-03-19-video-performance-design.md  2026-03-19-video-performance-requirements.md  2026-03-19-video-performance-tasks.md  2026-04-05-whisper-multi-device-performance-optimization.md  2026-04-05-whisper-performance-requirements.md  2026-04-05-whisper-performance-tasks.md  video-conversion-performance-improvement.md
docs/superpowers/plans/: 2026-04-11-unified-return-format.md
docs/survey/: README.md  insanely-fast-whisper-evaluation.md  whisper-alternatives-comparison.md  whisper-benchmark-results.md  whisper-performance-optimization.md  whisper-upgrade-plans.md
scripts/: batch-convert.sh  cleanup.py  run.sh  setup_mac.sh  start.sh  stop.sh  storage.py  test-deps.sh  verify_gpu_detection.py
tests/: conftest.py
tests/api/: test_cache.py  test_constants.py  test_endpoints.py  test_env_validation.py  test_retry.py  test_subtitles.py  test_system.py
tests/e2e/: test_audio_transcribe.py  test_convert_formats.py
tests/fixtures/: .gitkeep  generate_fixtures.py
tests/integration/: test_sdk_integration.py  test_transcribe_pipeline.py
tests/performance/: __init__.py  benchmark_audio_extract.py  benchmark_transcribe.py
tests/scripts/: test_storage_cleanup.py
tests/unit/: __init__.py  test_api_params.py  test_audio_extractor.py  test_auto_model_selection.py  test_backend_protocol.py  test_build_convert_response.py  test_chunking.py  test_chunking_parallel.py  test_constants.py  test_device_detector.py  test_device_utils.py  test_dynamic_chunk_length.py  test_faster_whisper_backend.py  test_model_prewarm.py  test_nemotron_backend.py  test_ocr_client.py  test_parallel_threshold.py  test_sync_prewarm.py  test_transcription_service.py  test_transcription_strategy.py  test_whisper_cpp_backend.py  test_youtube_client.py
(+2 files in other folders)
