[project]
name = "oh-my-markitdown"
version = "0.7.0"
description = "MarkItDown API - Convert files to Markdown with OCR and transcription"
authors = [{ name = "Kimhsiao", email = "white.shopping@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["markdown", "ocr", "transcription", "youtube", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    # MarkItDown 核心
    "markitdown[all]",

    # FastAPI
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "aiofiles",

    # OpenAI (可選 OCR)
    "openai",

    # Azure (可選)
    "azure-ai-documentintelligence",
    "azure-identity",

# Whisper 轉錄
"faster-whisper>=1.2.0",
"pywhispercpp>=1.0",
"psutil",

    # YouTube 下載
    "yt-dlp",

    # === SDK 遷移新增 ===
    "pytesseract>=0.3.10",
    "ffmpeg-python>=0.2.0",
    "pymupdf>=1.23.0",
    # Readability for clean HTML extraction
    "readability-lxml>=0.8.4.1",
]

[project.optional-dependencies]
cuda = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "faiss-cpu>=1.7",
]
rocm = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "faiss-cpu>=1.7",
]
apple-silicon = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "faiss-cpu>=1.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-aiofiles",
]

[project.scripts]
markitdown-api = "api.main:main"
markitdown-cli = "cli:main"

# === Ruff 配置 ===
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["api", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (交給 formatter 處理)
    "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["api"]

# === MyPy 配置 ===
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# === Pytest 配置 ===
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
]

# === Coverage 配置 ===
[tool.coverage.run]
source = ["api"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]